hope that overflow:hidden will finally fixed an empty space on the right

--- a/sass/main.sass
+++ b/sass/main.sass
@@ -45,11 +45,13 @@ body
   border: 1px solid black
   font-family: Roboto, Helvetica, Verdana, sans-serif
 
+  section, header, footer
+    overflow: hidden
+
   section
     position: relative
     min-height: 70vw
     width: 100%
-    overflow: hidden
     border: 1px solid black
 
     @media screen and (min-width: 768px)
